--- a/prebuilt/common/etc/init/nitrogen-system.rc
+++ b/prebuilt/common/etc/init/nitrogen-system.rc
@@ -34,6 +34,9 @@ on boot
     write /sys/kernel/mm/ksm/sleep_millisecs 1500
     write /sys/kernel/mm/ksm/pages_to_scan 256
 
+    # allow system to communicate pocket state
+    chown system system /sys/kernel/pocket_judge/inpocket
+
     # set permission to notify_on_migrate node (used by power hal)
     chown system system /dev/cpuctl/apps/cpu.notify_on_migrate
     chmod 0644 /dev/cpuctl/apps/cpu.notify_on_migrate
